Many additions and changes!

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -4,6 +4,13 @@
   "item.mccourse.chainsaw": "Chainsaw",
   "item.mccourse.tomato": "Tomato",
   "item.mccourse.frostfire_ice": "Frostfire Ice",
+  "item.mccourse.black_opal_sword": "Black Opal Sword",
+  "item.mccourse.black_opal_pickaxe": "Black Opal Pickaxe",
+  "item.mccourse.black_opal_shovel": "Black Opal Shovel",
+  "item.mccourse.black_opal_axe": "Black Opal Axe",
+  "item.mccourse.black_opal_hoe": "Black Opal Hoe",
+  "item.mccourse.black_opal_paxel": "Black Opal Paxel",
+  "item.mccourse.black_opal_hammer": "Black Opal Hammer",
 
   "block.mccourse.black_opal_block": "Block of Black Opal",
   "block.mccourse.raw_black_opal_block": "Block of Raw Black Opal",
@@ -16,6 +23,11 @@
   "block.mccourse.black_opal_slab": "Black Opal Slab",
   "block.mccourse.black_opal_button": "Black Opal Button",
   "block.mccourse.black_opal_pressure_plate": "Black Opal Pressure Plate",
+  "block.mccourse.black_opal_fence": "Black Opal Fence",
+  "block.mccourse.black_opal_fence_gate": "Black Opal Fence Gate",
+  "block.mccourse.black_opal_wall": "Black Opal Wall",
+  "block.mccourse.black_opal_door": "Black Opal Door",
+  "block.mccourse.black_opal_trapdoor": "Black Opal Trapdoor",
 
   "itemGroup.mccourse.mccourse_items_tab": "MC Course Items",
   "itemGroup.mccourse.mccourse_blocks_tab": "MC Course Blocks",
